trunk/Archive2/49/82887bfaf5533a/output
main.cpp:22:5: error: no matching function for call to 'foo'
    foo(1); // I want this to call foo(int)
    ^~~
main.cpp:14:20: note: candidate template ignored: couldn't infer template argument ''
template<int> void foo(int x)
                   ^
main.cpp:4:6: note: candidate function template not viable: requires 0 arguments, but 1 was provided
void foo() 
     ^
1 error generated.
